@startuml

title __READONLYSELECTONEMENU's Class Diagram__\n

  namespace com.woonders.lacemsjsf.ui {
    namespace component.readonlyselectonemenu {
      class com.woonders.lacemsjsf.ui.component.readonlyselectonemenu.ReadOnlySelectOneMenu {
          {static} + COMPONENT_FAMILY : String
          {static} + COMPONENT_TYPE : String
          + ReadOnlySelectOneMenu()
          + getFamily()
          + getRendererType()
      }
    }
  }
  

  namespace com.woonders.lacemsjsf.ui {
    namespace component.readonlyselectonemenu {
      class com.woonders.lacemsjsf.ui.component.readonlyselectonemenu.ReadOnlySelectOneMenuRenderer {
          {static} + RENDERER_TYPE : String
      }
    }
  }
  

  com.woonders.lacemsjsf.ui.component.readonlyselectonemenu.ReadOnlySelectOneMenu -up-|> org.primefaces.component.selectonemenu.SelectOneMenu
  com.woonders.lacemsjsf.ui.component.readonlyselectonemenu.ReadOnlySelectOneMenuRenderer -up-|> org.primefaces.component.selectonemenu.SelectOneMenuRenderer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
